crates/knok/tests/ui/backend_driver_mismatch.stderr
error: backend `metal-spirv` expects runtime driver `metal`, got `local-task`
 --> tests/ui/backend_driver_mismatch.rs:4:13
  |
4 |     backend(Backend::MetalSpirv, driver = Driver::LocalTask),
  |             ^^^^^^^

warning: unused import: `knok::prelude::*`
 --> tests/ui/backend_driver_mismatch.rs:1:5
  |
1 | use knok::prelude::*;
  |     ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
